mencoba menambahkan perubahan untuk coba git fetch di branch piturA

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       <H3>belajar-git-remote</H3>
       <p>hi</p>
       <p>ini dari branch piturA</p>
+      <p>ini adalah perubahan dari branch piturA untuk mencoba git fetch</p>
 </body>
 </html>
